--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.8
   flutter_dotenv: ^5.1.0
   intl: ^0.19.0
@@ -42,14 +44,15 @@ dependencies:
   equatable: ^2.0.5
   dio: ^5.4.3+1
   dartz: ^0.10.1
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
+  #  isar: ^3.1.0+1
+  #  isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.4
   animate_do: ^3.3.4
   card_swiper: ^3.0.1
   flutter_staggered_grid_view: ^0.7.0
   package_info_plus: ^4.2.0
-
+  video_player: ^2.4.10
+  chewie: ^1.5.0
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +79,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - assets/
+    - assets/images/
+    - assets/loaders/
+    - assets/app/
+    - assets/app/launcher_icon/
+    - assets/app/splash/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
