--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   package_info_plus: ^4.2.0
   video_player: ^2.4.10
   chewie: ^1.5.0
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
